@@ -210,17 +210,23 @@ plot.optContr <- function (x, superpose = TRUE, xlab = "Dose",
 }
 
 plotContr <- function(optContrObj, xlab = "Dose", ylab = "Contrast coefficients"){
+  if(!inherits(optContrObj, "optContr"))
+    stop("\"optContrObj\" needs to be of class Mods")
+
+  parList <- attr(optContrObj$muMat, "parList")
+  mod_nams <- getModNams(parList)
   cM <- optContrObj$contMat
   nD <- nrow(cM)
   nM <- ncol(cM)
   cMtr <- data.frame(resp = as.vector(cM),
                      dose = rep(as.numeric(dimnames(cM)[[1]]), nM),
-                     model = factor(rep(dimnames(cM)[[2]], each = nD),
-                     levels = dimnames(cM)[[2]]))
-  ggplot(cMtr, aes(dose, resp, col=model))+
+                     model = factor(rep(mod_nams, each = nD), levels=mod_nams),
+                     levels = dimnames(cM)[[2]])
+  ggplot(cMtr, aes_string("dose", "resp", col="model"))+
     geom_line(size=1.2)+
     geom_point()+
     theme_bw()+
     geom_point(size=1.8)+
+    xlab(xlab)+ylab(ylab)+
     theme(legend.position = "top", legend.title = element_blank())
 }
